tests/NormalTests/paczka1/fuzzy1/26069402.err
Error in line 5: Cfdu6Wh S446 95,9
Error in line 6: Cfdu6Wh A731 10,4
Error in line 11: Cfdu6Wh S137 0,0
Error in line 14: Cfdu6Wh S446 5,1
Error in line 18: sSHoN2zMS5x A731 67,1
Error in line 27: S700 A731 94,1
Error in line 19: PnA2geY S446 78,6
